Version 4.0.11 (2013-11-xx)
	Added the possibility to update button icon after it's been rendered.
	Fixed bug where IE would some times produce font elements when typing out side the body root blocks.
	Fixed bug where IE wouldn't properly use the configured root block element but instead use the a paragraph.
	Fixed bug where IE would throw a stack overflow if control selections non images was made in inline mode.
	Fixed bug where IE 8 would render an extra enter element if the contents of the editor was empty.
	Fixed bug where the caret wasn't moved to the first suitable element when updating the source.
	Fixed bug where protocol relative urls would be forced into http protocol.
	Fixed bug where internal images with data urls such as video elements would be removed by the paste_data_images option.
	Fixed bug where the autoresize plugin wouldn't properly resize the editor to initial contents some times.
	Fixed bug where the templates dialog wouldn't be properly rendered on IE 7.
	Fixed bug where updating styles in the advanced tab under the image dialog would remove the style attribute on cancel.
	Fixed bug where tinymce.full.min.js bundle script wasn't detected when looking for the tinymce root path.
	Fixed so menu shortcuts gets rendered with the Apple command icon patch contributed by Andy Keller.
	Fixed so the CSS compression of styles like "border" is a bit better for mixed values.
	Fixed so the template_popup_width/template_popup_height option works properly in the template plugin.
	Fixed so the languages parameter for AddOnManager.requireLangPack works the same way as for 3.x.
Version 4.0.10 (2013-10-28)
	Added new forced_root_block_attrs option that allows you to specify attributes for the root block.
	Fixed bug where the custom resize handles didn't work properly on IE 11.
	Fixed bug where the code plugin would select all contents in IE when content was updated.
	Fixed bug where the scroll position wouldn't get applied to floating toolbars.