@@ -1,5 +1,6 @@
 Version 4.0.11 (2013-11-xx)
 	Added the possibility to update button icon after it's been rendered.
+	Added new autosave_prefix option allows you to set the prefix for the local storage keys.
 	Fixed bug where IE would some times produce font elements when typing out side the body root blocks.
 	Fixed bug where IE wouldn't properly use the configured root block element but instead use the a paragraph.
 	Fixed bug where IE would throw a stack overflow if control selections non images was made in inline mode.
@@ -15,6 +16,7 @@ Version 4.0.11 (2013-11-xx)
 	Fixed so the CSS compression of styles like "border" is a bit better for mixed values.
 	Fixed so the template_popup_width/template_popup_height option works properly in the template plugin.
 	Fixed so the languages parameter for AddOnManager.requireLangPack works the same way as for 3.x.
+	Fixed so the autosave plugin uses the current page path, query string and editor id as it's default prefix.
 Version 4.0.10 (2013-10-28)
 	Added new forced_root_block_attrs option that allows you to specify attributes for the root block.
 	Fixed bug where the custom resize handles didn't work properly on IE 11.
